[gd_scene load_steps=29 format=3 uid="uid://bigwt5nryf0vp"]

[ext_resource type="Script" uid="uid://u8hmc1iwft00" path="res://exposition.gd" id="1_nc0m0"]
[ext_resource type="Texture2D" uid="uid://byv1v3kdn0n1f" path="res://assets/Sky BG.png" id="2_1jc3m"]
[ext_resource type="Texture2D" uid="uid://cv6r5hvognknd" path="res://assets/Beantopia.png" id="2_imb4w"]
[ext_resource type="Texture2D" uid="uid://bqef60gka5t56" path="res://assets/Explosion.png" id="3_4rug3"]
[ext_resource type="Texture2D" uid="uid://cucacp2ewyxr5" path="res://assets/Evil Lentil.png" id="4_1jc3m"]
[ext_resource type="Texture2D" uid="uid://bn5p3i8rwd8f2" path="res://assets/I hate beans.png" id="5_o1ytn"]
[ext_resource type="FontFile" uid="uid://cfoflph47piog" path="res://assets/ark-pixel-12px-proportional-latin.ttf" id="6_imb4w"]
[ext_resource type="Script" uid="uid://bb6vl0q0ceqbv" path="res://skip_dialogue.gd" id="7_4rug3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_k3qvs"]
atlas = ExtResource("2_imb4w")
region = Rect2(0, 0, 128, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6665"]
atlas = ExtResource("2_imb4w")
region = Rect2(0, 90, 128, 90)

[sub_resource type="SpriteFrames" id="SpriteFrames_61js4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3qvs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6665")
}],
"loop": true,
"name": &"default",
"speed": 0.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_imb4w"]
atlas = ExtResource("3_4rug3")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4rug3"]
atlas = ExtResource("3_4rug3")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jc3m"]
atlas = ExtResource("3_4rug3")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1ytn"]
atlas = ExtResource("3_4rug3")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_61js4"]
atlas = ExtResource("3_4rug3")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3xhj"]
atlas = ExtResource("3_4rug3")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mpyle"]
atlas = ExtResource("3_4rug3")
region = Rect2(0, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_r5etj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_imb4w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4rug3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jc3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1ytn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61js4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3xhj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpyle")
}],
"loop": false,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_1fwwh"]
atlas = ExtResource("4_1jc3m")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1va7"]
atlas = ExtResource("4_1jc3m")
region = Rect2(0, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_31wke"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1fwwh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1va7")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_w2r1k"]
atlas = ExtResource("5_o1ytn")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tg5xe"]
atlas = ExtResource("5_o1ytn")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdq7p"]
atlas = ExtResource("5_o1ytn")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8mck"]
atlas = ExtResource("5_o1ytn")
region = Rect2(64, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_4puna"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2r1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tg5xe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdq7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8mck")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_4rug3"]
font = ExtResource("6_imb4w")
font_size = 12
font_color = Color(0, 0, 0, 1)

[node name="Exposition" type="Node2D"]
texture_filter = 1
script = ExtResource("1_nc0m0")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(967.556, 543.75)
scale = Vector2(4.83778, 4.83778)
texture = ExtResource("2_1jc3m")

[node name="Beantopia" type="AnimatedSprite2D" parent="."]
position = Vector2(1319, 650)
scale = Vector2(8.68889, 8.68889)
sprite_frames = SubResource("SpriteFrames_61js4")

[node name="Explosion" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(1316, 375)
scale = Vector2(8.78125, 8.78125)
sprite_frames = SubResource("SpriteFrames_r5etj")
frame_progress = 0.782711

[node name="EvilLentil" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(288, 670)
scale = Vector2(16.1875, 16.1875)
sprite_frames = SubResource("SpriteFrames_31wke")
autoplay = "default"

[node name="LentilDialogue" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(712, 269)
scale = Vector2(7.78125, 7.78125)
sprite_frames = SubResource("SpriteFrames_4puna")

[node name="Text1" type="Label" parent="."]
visible = false
offset_left = 103.0
offset_top = 596.0
offset_right = 265.0
offset_bottom = 688.0
scale = Vector2(3.78992, 3.78992)
text = "The beans lived in peace
thanks to their Temporal
Anchor which maintained
their existance in a world
full of temporal disturbances"
label_settings = SubResource("LabelSettings_4rug3")

[node name="Text2" type="Label" parent="."]
visible = false
offset_left = 103.0
offset_top = 596.0
offset_right = 265.0
offset_bottom = 688.0
scale = Vector2(3.78992, 3.78992)
text = "That all changed when the evil
lentil came, he hated all beans
because everyone prefers beans
to lentils."
label_settings = SubResource("LabelSettings_4rug3")

[node name="Text3" type="Label" parent="."]
visible = false
offset_left = 103.0
offset_top = 596.0
offset_right = 265.0
offset_bottom = 688.0
scale = Vector2(3.78992, 3.78992)
text = "You must save bean kind by
reparing the master Temporal
Anchor, at your disposal you
have a simple Temporal Anchor."
label_settings = SubResource("LabelSettings_4rug3")

[node name="Text4" type="Label" parent="."]
visible = false
offset_left = 103.0
offset_top = 596.0
offset_right = 265.0
offset_bottom = 688.0
scale = Vector2(3.78992, 3.78992)
text = "Your simple temporal anchor
allows you to go back in time
if anything goes wrong, it also
can create Temporal Spectres
to aid you in your mission."
label_settings = SubResource("LabelSettings_4rug3")

[node name="Text5" type="Label" parent="."]
visible = false
offset_left = 103.0
offset_top = 596.0
offset_right = 265.0
offset_bottom = 688.0
scale = Vector2(3.78992, 3.78992)
text = "Use the `r` key to go back
in time whilst creating a
Spectre, and `e` to
reset fully. "
label_settings = SubResource("LabelSettings_4rug3")

[node name="Text6" type="Label" parent="."]
visible = false
offset_left = 103.0
offset_top = 596.0
offset_right = 265.0
offset_bottom = 688.0
scale = Vector2(3.78992, 3.78992)
text = "Your final ability, is the
unique ability of a bean to
sprout, create a sprout with
the `e` key which moves
opposite of you."
label_settings = SubResource("LabelSettings_4rug3")

[node name="Text7" type="Label" parent="."]
visible = false
offset_left = 103.0
offset_top = 596.0
offset_right = 265.0
offset_bottom = 688.0
scale = Vector2(3.78992, 3.78992)
text = "Good luck, only you can save
bean kind from the evil lentil!
The future of bean kind rests
on your shoulders!"
label_settings = SubResource("LabelSettings_4rug3")

[node name="Button" type="Button" parent="."]
offset_left = -63.0
offset_top = -48.0
offset_right = 1989.0
offset_bottom = 1191.0
focus_mode = 0
flat = true
script = ExtResource("7_4rug3")
